# drogue-device-ng

./: Cargo.toml  README.md
actors/: Cargo.toml
actors/src/: button.rs  led.rs  lib.rs
device/: Cargo.toml
device/src/: lib.rs  testutil.rs
device/src/actors/: button.rs  ticker.rs  timer.rs
device/src/actors/led/: mod.rs
device/src/drivers/lora/sx127x/: mod.rs
device/src/drivers/wifi/esp8266/: lib.rs
device/src/kernel/: actor.rs  channel.rs  signal.rs
device/tests/: button_tests.rs  integration_tests.rs  ticker_tests.rs
docs/modules/ROOT/pages/: drivers.adoc
drivers/lora/rak811/: Cargo.toml
drivers/lora/rak811/src/: lib.rs
drivers/network/esp8266/: Cargo.toml
drivers/network/esp8266/src/: buffer.rs  lib.rs  protocol.rs
examples/common/wifi/src/: lib.rs
examples/nrf52/microbit-esp8266/src/: app.rs  main.rs
examples/nrf52/microbit-hello/: Cargo.toml
examples/nrf52/microbit-hello/.cargo/: config
examples/nrf52/microbit-hello/src/: main.rs
examples/nrf52/microbit-rak811/: Cargo.toml
examples/nrf52/microbit-uart/: Cargo.toml
examples/nrf52/microbit-uart/.cargo/: config
examples/nrf52/microbit-uart/src/: main.rs
examples/rp/blinky/src/: main.rs
examples/std/esp8266/: README.adoc
examples/std/esp8266/src/: main.rs
examples/std/hello/: Cargo.toml
examples/std/hello/src/: main.rs
examples/stm32l0xx/lora-discovery/src/: app.rs  main.rs
kernel/: Cargo.toml
kernel/src/: actor.rs  channel.rs  device.rs  fmt.rs  lib.rs
macros/src/: lib.rs
platform/nrf/: Cargo.toml
platform/nrf/src/: lib.rs
platform/std/: Cargo.toml
platform/std/src/: lib.rs
traits/network/src/: wifi.rs
