[package]
authors = [
    "Ulf Lilleengen <lulf@redhat.com>",
    "Bob McWhirter <bmcwhirt@redhat.com>"
]
edition = "2018"
name = "drogue-device-kernel"
version = "0.1.0"

[lib]

[dependencies.embassy]
version = "0.1.0"
# git = "https://github.com/embassy-rs/embassy.git"
git = "https://github.com/lulf/embassy.git"
branch = "signal-std"
default-features = false

[dependencies.heapless]
version = "0.6"

[dependencies.log]
version = "0.4.11"
optional = true

#nix = "0.19.1"

[features]
default = ["embassy/log", "log"]
