[package]
authors = [
    "Ulf Lilleengen <lulf@redhat.com>",
    "Bob McWhirter <bmcwhirt@redhat.com>"
]
edition = "2018"
name = "drogue-device-platform-nrf"
version = "0.1.0"

[lib]

[dependencies.embassy]
version = "0.1.0"
# git = "https://github.com/embassy-rs/embassy.git"
git = "https://github.com/lulf/embassy.git"
branch = "signal-std"
default-features = false

[dependencies.embassy-nrf]
version = "0.1.0"
# git = "https://github.com/embassy-rs/embassy.git"
git = "https://github.com/lulf/embassy.git"
branch = "signal-std"
features = ["52833"]

[dependencies.embassy-traits]
version = "0.1.0"
# git = "https://github.com/embassy-rs/embassy.git"
git = "https://github.com/lulf/embassy.git"
branch = "signal-std"

[dependencies.drogue-device-kernel]
path = "../../kernel"
features = ["log"]

[dependencies.drogue-device-macros]
path = "../../macros"

[features]
log = ["drogue-device-kernel/log", "embassy/log"]
