[package]
authors = [
    "Ulf Lilleengen <lulf@redhat.com>",
    "Bob McWhirter <bmcwhirt@redhat.com>"
]
edition = "2018"
name = "drogue-device-platform-nrf"
version = "0.1.0"

[features]
defmt-trace = [ ]
defmt-debug = [ ]
defmt-info = [ ]
defmt-warn = [ ]
defmt-error = [ ]

52833 = [ "embassy-nrf/52833" ]

[dependencies.defmt]
version = "0.2"
optional = true

[dependencies.log]
version = "0.4"
optional = true

[dependencies.drogue-device-kernel]
path = "../../kernel"
default-features = false

[dependencies.drogue-device-macros]
path = "../../macros"

[target.'cfg(target_arch="arm")'.dependencies.embassy-nrf]
version = "0.1.0"
# git = "https://github.com/embassy-rs/embassy.git"
git = "https://github.com/lulf/embassy.git"
branch = "signal-std"
default-features = false

[dependencies.embassy-traits]
version = "0.1.0"
# git = "https://github.com/embassy-rs/embassy.git"
git = "https://github.com/lulf/embassy.git"
branch = "signal-std"
