[package]
authors = [
    "Ulf Lilleengen <lulf@redhat.com>",
    "Bob McWhirter <bmcwhirt@redhat.com>"
]
edition = "2018"
name = "drogue-device-platform-std"
version = "0.1.0"

[lib]

[dependencies.embassy]
version = "0.1.0"
# git = "https://github.com/embassy-rs/embassy.git"
git = "https://github.com/lulf/embassy.git"
branch = "signal-std"

[dependencies.embassy-std]
version = "0.1.0"
# git = "https://github.com/embassy-rs/embassy.git"
git = "https://github.com/lulf/embassy.git"
branch = "signal-std"

[dependencies.log]
version = "0.4"

[dependencies.drogue-device-kernel]
path = "../../kernel"
features = ["std", "log"]

[dependencies.drogue-device-macros]
path = "../../macros"

[features]
defmt-trace = [ ]
defmt-debug = [ ]
defmt-info = [ ]
defmt-warn = [ ]
defmt-error = [ ]