[package]
authors = [
    "Ulf Lilleengen <lulf@redhat.com>",
    "Bob McWhirter <bmcwhirt@redhat.com>"
]
edition = "2018"
name = "drogue-device-example-nrf52-microbit-uart"
version = "0.1.0"

[dependencies.defmt]
version = "0.2"

[dependencies.defmt-rtt]
version = "0.2"

[dependencies.drogue-device-platform-nrf]
path = "../../../platform/nrf"
features = ["defmt", "defmt-trace", "52833" ]

[dependencies.embassy]
version = "0.1.0"
# git = "https://github.com/embassy-rs/embassy.git"
git = "https://github.com/lulf/embassy.git"
branch = "signal-std"

[dependencies.cortex-m-rt]
version = "0.6"

[dependencies.cortex-m]
version = "0.7"
features = ["inline-asm"]

[dependencies.embassy-nrf]
version = "0.1.0"
# git = "https://github.com/embassy-rs/embassy.git"
git = "https://github.com/lulf/embassy.git"
branch = "signal-std"
default-features = false

[dependencies.panic-probe]
version = "0.2.0"
features = ["print-defmt"]

[features]
default = [
    "defmt-default",
]
defmt-default = []
defmt-trace = [ ]
defmt-debug = [ ]
defmt-info = [ ]
defmt-warn = [ ]
defmt-error = [ ]
